force-app/main/default/objects/Inventory_Transaction__c/Inventory_Transaction__c.object-meta.xml
<CustomObject>
    <label>Inventory Transaction</label>
    <nameField>
        <displayFormat>TXN-{0000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>