force-app/main/default/objects/Inventory_Transaction__c/fields/Source_Product__c.field-meta.xml
<CustomField>
    <fullName>Source_Product__c</fullName>
    <label>Source Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Source Product Inventory Transactions</relationshipLabel>
    <relationshipName>Source_Product_Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>