force-app/main/default/objects/Inventory_Transaction__c/fields/Stock_After__c.field-meta.xml
<CustomField>
    <fullName>Stock_After__c</fullName>
    <label>Stock After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>