force-app/main/default/objects/Inventory_Transaction__c/fields/Stock_Before__c.field-meta.xml
<CustomField>
    <fullName>Stock_Before__c</fullName>
    <label>Stock Before</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>