force-app/main/default/objects/Inventory_Transaction__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <displayFormat>TXN-{0000000}</displayFormat>
    <label>Transaction Number</label>
    <type>AutoNumber</type>
</CustomField>